Document, Attributes, and Attribute all share a ThreadLocal instance of the ClassCache
TypeFactory now uses a CaffeineCache